# OnlyPremiumBot

./: .gitignore  Dockerfile  docker-compose.yaml  env.env.sample  pyproject.toml  requirements.txt
src/: config.py  main.py
