[tool.poetry]
name = "only-premium-bot"
version = "1.0.0"
description = "Telegram bot who gives cool features to administer premium users"
authors = ["Igor Tolmachov <me@igorek.dev>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.21"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.3.0"
isort = "^5.10.1"

[tool.black]
line-length = 90

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.isort]
profile = "black"
filter_files = true
extend_skip = ["__init__.py"]
